cabal-version:      3.8
name:               Jianpu
synopsis:           MusicXML to jianpu-ly conversion
version:            0.1.0.0
homepage:           https://github.com/halfaya/Jianpu
license:            Apache-2.0
author:             John Leo
maintainer:         leo@halfaya.org
copyright:          2023 John Leo

executable Jianpu
  hs-source-dirs:   src
  main-is:          Main.hs
  build-depends:    base ^>=4.17.0.0, xml, text, split
  other-modules:    Music, Xml
  default-language: Haskell2010
  